edit(budget): поправила маппер, вынесла енум, скрыла пароли и юзернеймы, перевела бд на liquibase