@@ -4,21 +4,22 @@ import com.teamfourpixels.dto.*;
 import com.teamfourpixels.entity.*;
 import org.mapstruct.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface BudgetMapper {
-    @Mapping(source = "year", target = "year")
-    @Mapping(source = "month", target = "month")
+
     BudgetDto toDto(Budget entity);
 
-    @Mapping(target = "budget", source = "budget")
     BudgetLimit toLimitEntity(LimitDto dto, Budget budget);
 
     default List<BudgetLimit> toLimitEntities(List<LimitDto> dtos, Budget budget) {
         return dtos.stream()
-                .map(dto -> toLimitEntity(dto, budget))
-                .collect(Collectors.toList());
+                .map(dto -> {
+                    BudgetLimit limit = toLimitEntity(dto, budget);
+                    limit.setBudget(budget);
+                    return limit;
+                })
+                .toList();
     }
 
     default Budget toEntity(CreateBudgetRequest request, Budget existingBudget, Long userId) {
